--- a/profile-seller.html
+++ b/profile-seller.html
@@ -291,7 +291,92 @@
             </section>
         </div>
         <footer class="footer">
-
+            <div class="container">
+                <div class="footer__top">
+                    <div class="col">
+                        <p class="footer__title">
+                            Explore
+                        </p>
+                        <nav>
+                            <ul>
+                                <li>
+                                    <a href="#">Home</a>
+                                </li>
+                                <li>
+                                    <a href="#">All Products</a>
+                                </li>
+                                <li>
+                                    <a href="#">Favourite</a>
+                                </li>
+                                <li>
+                                    <a href="#">Creators</a>
+                                </li>
+                                <li>
+                                    <a href="#">Travel Insights</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="col">
+                        <p class="footer__title">
+                            Partnerships
+                        </p>
+                        <ul>
+                            <li>
+                                <a href="#">For Creators</a>
+                            </li>
+                            <li>
+                                <a href="#">For Investors & Partners</a>
+                            </li>
+                            <li>
+                                <a href="#">Referral Program</a>
+                            </li>
+                            <li>
+                                <a href="#">Help Center</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <p class="footer__title">
+                            Legal
+                        </p>
+                        <ul>
+                            <li>
+                                <a href="#">Terms and Conditions</a>
+                            </li>
+                            <li>
+                                <a href="#">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a href="#">Cookie Policy</a>
+                            </li>
+                            <li>
+                                <a href="#">More Policies</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <p class="footer__title">
+                            My Account
+                        </p>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                   Join / Sign In 
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                   Forgot Password?
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__bottom">
+                    
+                </div>
+            </div>
         </footer>
     </div>
 </body>
