add_2_page and style

--- a/profile-seller.html
+++ b/profile-seller.html
@@ -374,7 +374,29 @@
                     </div>
                 </div>
                 <div class="footer__bottom">
-                    
+                    <div class="row">
+                        <div class="col">
+                            <a class="footer__title" href="#">
+                                <img src="assets/imgs/icons/footer-title.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="col footer__socials">
+                            <a href="#">
+                                <img src="assets/imgs/icons/footer-facebook.svg" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="assets/imgs/icons/footer-xai.svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <span>
+                            2025 TrekGuider Ink.
+                        </span>
+                        <p>
+                            design by Agency <b>moloko69</b>
+                        </p>
+                    </div>
                 </div>
             </div>
         </footer>
