footer, валидация форм, блок социальных сетей,

--- a/profile-seller.html
+++ b/profile-seller.html
@@ -108,8 +108,7 @@
                                     <span class="label-name">
                                         Full Name
                                     </span>
-                                    <input type="text" name="user-name"
-                                        placeholder="Your legal first and last name">
+                                    <input type="text" name="user-name" placeholder="Your legal first and last name">
                                     <i>
                                         <svg width="13.332031" height="16.000488" viewBox="0 0 13.332 16.0005"
                                             fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -124,7 +123,7 @@
                                         </svg>
                                     </i>
                                 </label>
-                                <span class="label-name">
+                                <span class="label-name custom-label">
                                     Address
                                 </span>
                                 <label class="half req">
@@ -172,90 +171,92 @@
                                     your
                                     social media profiles.
                                 </p>
-                                <label class="check-label">
-                                    <div class="checkbox">
-                                        <div class="item">
-                                            <img src="assets/imgs/icons/youtube.svg" alt="">
-                                            <span>
-                                                Youtube channel
-                                            </span>
+                                <div class="profile-social-wrap">
+                                    <label class="check-label">
+                                        <div class="checkbox">
+                                            <div class="item">
+                                                <img src="assets/imgs/icons/youtube.svg" alt="">
+                                                <span>
+                                                    Youtube channel
+                                                </span>
+                                            </div>
+                                            <div class="checkbox-item">
+                                                <input type="checkbox" name="youtube">
+                                                <span class="decor"></span>
+                                            </div>
                                         </div>
-                                        <div class="checkbox-item">
-                                            <input type="checkbox" name="youtube">
-                                            <span class="decor"></span>
+                                    </label>
+                                    <label class="check-label">
+                                        <div class="checkbox">
+                                            <div class="item">
+                                                <img src="assets/imgs/icons/tiktok.svg" alt="">
+                                                <span>
+                                                    TikTok Account
+                                                </span>
+                                            </div>
+                                            <div class="checkbox-item">
+                                                <input type="checkbox" name="tiktok">
+                                                <span class="decor"></span>
+                                            </div>
                                         </div>
-                                    </div>
-                                </label>
-                                <label class="check-label">
-                                    <div class="checkbox">
-                                        <div class="item">
-                                            <img src="assets/imgs/icons/tiktok.svg" alt="">
-                                            <span>
-                                                TikTok Account
-                                            </span>
+                                    </label>
+                                    <label class="check-label">
+                                        <div class="checkbox">
+                                            <div class="item">
+                                                <img src="assets/imgs/icons/google.svg" alt="">
+                                                <span>
+                                                    Google Account
+                                                </span>
+                                            </div>
+                                            <div class="checkbox-item">
+                                                <input type="checkbox" name="google">
+                                                <span class="decor"></span>
+                                            </div>
                                         </div>
-                                        <div class="checkbox-item">
-                                            <input type="checkbox" name="tiktok">
-                                            <span class="decor"></span>
+                                    </label>
+                                    <label class="check-label">
+                                        <div class="checkbox">
+                                            <div class="item">
+                                                <img src="assets/imgs/icons/facebook.svg" alt="">
+                                                <span>
+                                                    Facebook Account/Page
+                                                </span>
+                                            </div>
+                                            <div class="checkbox-item">
+                                                <input type="checkbox" name="facebook">
+                                                <span class="decor"></span>
+                                            </div>
                                         </div>
-                                    </div>
-                                </label>
-                                <label class="check-label">
-                                    <div class="checkbox">
-                                        <div class="item">
-                                            <img src="assets/imgs/icons/google.svg" alt="">
-                                            <span>
-                                                Google Account
-                                            </span>
+                                    </label>
+                                    <label class="check-label">
+                                        <div class="checkbox">
+                                            <div class="item">
+                                                <img src="assets/imgs/icons/insta.svg" alt="">
+                                                <span>
+                                                    Instagram Account
+                                                </span>
+                                            </div>
+                                            <div class="checkbox-item">
+                                                <input type="checkbox" name="insta">
+                                                <span class="decor"></span>
+                                            </div>
                                         </div>
-                                        <div class="checkbox-item">
-                                            <input type="checkbox" name="google">
-                                            <span class="decor"></span>
+                                    </label>
+                                    <label class="check-label">
+                                        <div class="checkbox">
+                                            <div class="item">
+                                                <img src="assets/imgs/icons/xai.svg" alt="">
+                                                <span>
+                                                    X (Twitter) Account
+                                                </span>
+                                            </div>
+                                            <div class="checkbox-item">
+                                                <input type="checkbox" name="xai">
+                                                <span class="decor"></span>
+                                            </div>
                                         </div>
-                                    </div>
-                                </label>
-                                <label class="check-label">
-                                    <div class="checkbox">
-                                        <div class="item">
-                                            <img src="assets/imgs/icons/facebook.svg" alt="">
-                                            <span>
-                                                Facebook Account/Page
-                                            </span>
-                                        </div>
-                                        <div class="checkbox-item">
-                                            <input type="checkbox" name="facebook">
-                                            <span class="decor"></span>
-                                        </div>
-                                    </div>
-                                </label>
-                                <label class="check-label">
-                                    <div class="checkbox">
-                                        <div class="item">
-                                            <img src="assets/imgs/icons/insta.svg" alt="">
-                                            <span>
-                                                Instagram Account
-                                            </span>
-                                        </div>
-                                        <div class="checkbox-item">
-                                            <input type="checkbox" name="insta">
-                                            <span class="decor"></span>
-                                        </div>
-                                    </div>
-                                </label>
-                                <label class="check-label">
-                                    <div class="checkbox">
-                                        <div class="item">
-                                            <img src="assets/imgs/icons/xai.svg" alt="">
-                                            <span>
-                                                X (Twitter) Account
-                                            </span>
-                                        </div>
-                                        <div class="checkbox-item">
-                                            <input type="checkbox" name="xai">
-                                            <span class="decor"></span>
-                                        </div>
-                                    </div>
-                                </label>
+                                    </label>
+                                </div>
                                 <p>
                                     Don't see your social network listed? <a href="#">Contact us</a> to verify other
                                     social
@@ -362,12 +363,12 @@
                         <ul>
                             <li>
                                 <a href="#">
-                                   Join / Sign In 
+                                    Join / Sign In
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                   Forgot Password?
+                                    Forgot Password?
                                 </a>
                             </li>
                         </ul>
@@ -401,6 +402,8 @@
             </div>
         </footer>
     </div>
+
+    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
