--- a/profile-seller.html
+++ b/profile-seller.html
@@ -6,6 +6,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@19.5.6/build/css/intlTelInput.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@19.5.6/build/js/intlTelInput.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Alex</title>
 </head>
@@ -160,7 +162,7 @@
                                     <span class="label-name">
                                         Phone Number
                                     </span>
-                                    <input type="tel" placeholder="+1">
+                                    <input type="tel" id="phone" name="user-phone" placeholder="+1">
                                 </label>
 
                                 <h2>
