mobile-versiton for verification

--- a/profile-seller.html
+++ b/profile-seller.html
@@ -37,6 +37,13 @@
                             <input type="text" placeholder="Search the site...">
                         </form>
                     </div>
+                    <div class="header-mobile-btn">
+                        <div class="menu-btn">
+                            <span>
+                                
+                            </span>
+                        </div>
+                    </div>
                     <nav class="header__nav">
                         <ul>
                             <li>
@@ -287,9 +294,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="col">
-
-                    </div>
+                   
                 </div>
             </section>
         </div>
