создание страниц для 5 этапа, правки css, js

--- a/4-step/invite-page.html
+++ b/4-step/invite-page.html
@@ -6,8 +6,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/libs/swiper.css">
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/libs/swiper.css">
+  <link rel="stylesheet" href="/assets/css/style.css" />
 
   <title>Alex</title>
 </head>
@@ -19,7 +19,7 @@
         <div class="header__body">
           <div class="header__title">
             <a href="#">
-              <img src="assets/imgs/icons/title.svg" alt="" />
+              <img src="/assets/imgs/icons/title.svg" alt="" />
             </a>
           </div>
           <div class="header__search">
@@ -53,17 +53,17 @@
           </nav>
           <div class="header__profile">
             <a class="header__profile-item" href="#">
-              <img src="assets/imgs/icons/profile-icon.svg" alt="" />
+              <img src="/assets/imgs/icons/profile-icon.svg" alt="" />
               <span> @talmaev1 </span>
             </a>
           </div>
           <div class="header__actions">
             <a class="header-favorite" href="#">
-              <img src="assets/imgs/icons/fav-icon.svg" alt="" />
+              <img src="/assets/imgs/icons/fav-icon.svg" alt="" />
               <span class="fav-count">10</span>
             </a>
             <a href="#" class="header-cart">
-              <img src="assets/imgs/icons/cart.svg" alt="" />
+              <img src="/assets/imgs/icons/cart.svg" alt="" />
               <span class="fav-count">10</span>
             </a>
           </div>
@@ -199,7 +199,7 @@
             <div class="invite-power__items">
             <div class="item">
               <div class="img">
-                <img src="assets/imgs/pi1.png" alt="" />
+                <img src="/assets/imgs/pi1.png" alt="" />
               </div>
               <div class="text">
                 <h3>Personal Landing Page</h3>
@@ -212,7 +212,7 @@
             </div>
             <div class="item">
               <div class="img">
-                <img src="assets/imgs/pi2.png" alt="" />
+                <img src="/assets/imgs/pi2.png" alt="" />
               </div>
               <div class="text">
                 <h3>Unlimited Content Formats</h3>
@@ -225,7 +225,7 @@
             </div>
             <div class="item">
               <div class="img">
-                <img src="assets/imgs/pi3.png" alt="" />
+                <img src="/assets/imgs/pi3.png" alt="" />
               </div>
               <div class="text">
                 <h3>Boost Sales with Articles</h3>
@@ -237,7 +237,7 @@
             </div>
             <div class="item">
               <div class="img">
-                <img src="assets/imgs/pi4.png" alt="" />
+                <img src="/assets/imgs/pi4.png" alt="" />
               </div>
               <div class="text">
                 <h3>Direct Fan Support</h3>
@@ -249,7 +249,7 @@
             </div>
             <div class="item">
               <div class="img">
-                <img src="assets/imgs/pi5.png" alt="" />
+                <img src="/assets/imgs/pi5.png" alt="" />
               </div>
               <div class="text">
                 <h3>Worldwide Payments</h3>
@@ -262,7 +262,7 @@
             </div>
             <div class="item">
               <div class="img">
-                <img src="assets/imgs/pi6.png" alt="" />
+                <img src="/assets/imgs/pi6.png" alt="" />
               </div>
               <div class="text">
                 <h3>Global Marketplace</h3>
@@ -275,7 +275,7 @@
             </div>
             <div class="item">
               <div class="img">
-                <img src="assets/imgs/pi7.png" alt="" />
+                <img src="/assets/imgs/pi7.png" alt="" />
               </div>
               <div class="text">
                 <h3>Trusted & Secure</h3>
@@ -288,7 +288,7 @@
             </div>
             <div class="item">
               <div class="img">
-                <img src="assets/imgs/pi8.png" alt="" />
+                <img src="/assets/imgs/pi8.png" alt="" />
               </div>
               <div class="text">
                 <h3>Data-Driven Growth</h3>
@@ -301,7 +301,7 @@
             </div>
             <div class="item">
               <div class="img">
-                <img src="assets/imgs/pi9.png" alt="" />
+                <img src="/assets/imgs/pi9.png" alt="" />
               </div>
               <div class="text">
                 <h3>Built-in Gift Feature</h3>
@@ -568,7 +568,7 @@
               <a class="main-btn" href="#"> Start Earning Today </a>
             </div>
             <div class="invite-bottom__img">
-              <img src="assets/imgs/invite-bottom.png" alt="" />
+              <img src="/assets/imgs/invite-bottom.png" alt="" />
             </div>
           </div>
         </div>
@@ -649,15 +649,15 @@
           <div class="row">
             <div class="col">
               <a class="footer__title" href="#">
-                <img src="assets/imgs/icons/footer-title.svg" alt="" />
+                <img src="/assets/imgs/icons/footer-title.svg" alt="" />
               </a>
             </div>
             <div class="col footer__socials">
               <a href="#">
-                <img src="assets/imgs/icons/footer-facebook.svg" alt="" />
+                <img src="/assets/imgs/icons/footer-facebook.svg" alt="" />
               </a>
               <a href="#">
-                <img src="assets/imgs/icons/footer-xai.svg" alt="" />
+                <img src="/assets/imgs/icons/footer-xai.svg" alt="" />
               </a>
             </div>
           </div>
@@ -669,8 +669,8 @@
       </div>
     </footer>
   </div>
-  <script src="assets/libs/swiper.js"></script>
-  <script src="assets/js/app.js"></script>
+  <script src="/assets/libs/swiper.js"></script>
+  <script src="/assets/js/app.js"></script>
 </body>
 
 </html>
