--- a/4-step/setting-page.html
+++ b/4-step/setting-page.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <title>Alex</title>
 </head>
 
@@ -17,7 +17,7 @@
                 <div class="header__body">
                     <div class="header__title">
                         <a href="#">
-                            <img src="assets/imgs/icons/title.svg" alt="" />
+                            <img src="/assets/imgs/icons/title.svg" alt="" />
                         </a>
                     </div>
                     <div class="header__search">
@@ -52,17 +52,17 @@
                     </nav>
                     <div class="header__profile">
                         <a class="header__profile-item" href="#">
-                            <img src="assets/imgs/icons/profile-icon.svg" alt="" />
+                            <img src="/assets/imgs/icons/profile-icon.svg" alt="" />
                             <span> @talmaev1 </span>
                         </a>
                     </div>
                     <div class="header__actions">
                         <a class="header-favorite" href="#">
-                            <img src="assets/imgs/icons/fav-icon.svg" alt="" />
+                            <img src="/assets/imgs/icons/fav-icon.svg" alt="" />
                             <span class="fav-count">10</span>
                         </a>
                         <a href="#" class="header-cart">
-                            <img src="assets/imgs/icons/cart.svg" alt="" />
+                            <img src="/assets/imgs/icons/cart.svg" alt="" />
                             <span class="fav-count">10</span>
                         </a>
                     </div>
@@ -219,15 +219,15 @@
                     <div class="row">
                         <div class="col">
                             <a class="footer__title" href="#">
-                                <img src="assets/imgs/icons/footer-title.svg" alt="" />
+                                <img src="/assets/imgs/icons/footer-title.svg" alt="" />
                             </a>
                         </div>
                         <div class="col footer__socials">
                             <a href="#">
-                                <img src="assets/imgs/icons/footer-facebook.svg" alt="" />
+                                <img src="/assets/imgs/icons/footer-facebook.svg" alt="" />
                             </a>
                             <a href="#">
-                                <img src="assets/imgs/icons/footer-xai.svg" alt="" />
+                                <img src="/assets/imgs/icons/footer-xai.svg" alt="" />
                             </a>
                         </div>
                     </div>
