--- a/4-step/my-purchases.html
+++ b/4-step/my-purchases.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
   <title>Alex</title>
 </head>
 
@@ -17,7 +17,7 @@
         <div class="header__body">
           <div class="header__title">
             <a href="#">
-              <img src="assets/imgs/icons/title.svg" alt="" />
+              <img src="/assets/imgs/icons/title.svg" alt="" />
             </a>
           </div>
           <div class="header__search">
@@ -51,17 +51,17 @@
           </nav>
           <div class="header__profile">
             <a class="header__profile-item" href="#">
-              <img src="assets/imgs/icons/profile-icon.svg" alt="" />
+              <img src="/assets/imgs/icons/profile-icon.svg" alt="" />
               <span> @talmaev1 </span>
             </a>
           </div>
           <div class="header__actions">
             <a class="header-favorite" href="#">
-              <img src="assets/imgs/icons/fav-icon.svg" alt="" />
+              <img src="/assets/imgs/icons/fav-icon.svg" alt="" />
               <span class="fav-count">10</span>
             </a>
             <a href="#" class="header-cart">
-              <img src="assets/imgs/icons/cart.svg" alt="" />
+              <img src="/assets/imgs/icons/cart.svg" alt="" />
               <span class="fav-count">10</span>
             </a>
           </div>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="name">
                   <div class="img">
-                    <img src="assets/imgs/item-preview.png" alt="" />
+                    <img src="/assets/imgs/item-preview.png" alt="" />
                   </div>
                   <p>A Guide to Getting to Know North Korea</p>
                 </div>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="name">
                   <div class="img">
-                    <img src="assets/imgs/item-preview.png" alt="" />
+                    <img src="/assets/imgs/item-preview.png" alt="" />
                   </div>
                   <p>A Guide to Getting to Know North Korea</p>
                 </div>
@@ -201,7 +201,7 @@
                 </div>
                 <div class="name">
                   <div class="img">
-                    <img src="assets/imgs/item-preview.png" alt="" />
+                    <img src="/assets/imgs/item-preview.png" alt="" />
                   </div>
                   <p>A Guide to Getting to Know North Korea</p>
                 </div>
@@ -298,15 +298,15 @@
           <div class="row">
             <div class="col">
               <a class="footer__title" href="#">
-                <img src="assets/imgs/icons/footer-title.svg" alt="" />
+                <img src="/assets/imgs/icons/footer-title.svg" alt="" />
               </a>
             </div>
             <div class="col footer__socials">
               <a href="#">
-                <img src="assets/imgs/icons/footer-facebook.svg" alt="" />
+                <img src="/assets/imgs/icons/footer-facebook.svg" alt="" />
               </a>
               <a href="#">
-                <img src="assets/imgs/icons/footer-xai.svg" alt="" />
+                <img src="/assets/imgs/icons/footer-xai.svg" alt="" />
               </a>
             </div>
           </div>
@@ -317,7 +317,7 @@
         </div>
       </div>
     </footer>
-    <script src="assets/js/app.js"></script>
+    <script src="/assets/js/app.js"></script>
   </div>
 </body>
 
