--- a/4-step/profile-seller.html
+++ b/4-step/profile-seller.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@19.5.6/build/css/intlTelInput.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@19.5.6/build/js/intlTelInput.min.js"></script>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Alex</title>
 </head>
 
@@ -19,7 +19,7 @@
                 <div class="header__body">
                     <div class="header__title">
                         <a href="#">
-                            <img src="assets/imgs/icons/title.svg" alt="">
+                            <img src="/assets/imgs/icons/title.svg" alt="">
                         </a>
                     </div>
                     <div class="header__search">
@@ -70,7 +70,7 @@
                     </nav>
                     <div class="header__profile">
                         <a class="header__profile-item" href="#">
-                            <img src="assets/imgs/icons/profile-icon.svg" alt="">
+                            <img src="/assets/imgs/icons/profile-icon.svg" alt="">
                             <span>
                                 @talmaev1
                             </span>
@@ -78,11 +78,11 @@
                     </div>
                     <div class="header__actions">
                         <a class="header-favorite" href="#">
-                            <img src="assets/imgs/icons/fav-icon.svg" alt="">
+                            <img src="/assets/imgs/icons/fav-icon.svg" alt="">
                             <span class="fav-count">10</span>
                         </a>
                         <a href="#" class="header-cart">
-                            <img src="assets/imgs/icons/cart.svg" alt="">
+                            <img src="/assets/imgs/icons/cart.svg" alt="">
                             <span class="fav-count">10</span>
                         </a>
                     </div>
@@ -184,7 +184,7 @@
                                     <label class="check-label">
                                         <div class="checkbox">
                                             <div class="item">
-                                                <img src="assets/imgs/icons/youtube.svg" alt="">
+                                                <img src="/assets/imgs/icons/youtube.svg" alt="">
                                                 <span>
                                                     Youtube channel
                                                 </span>
@@ -198,7 +198,7 @@
                                     <label class="check-label">
                                         <div class="checkbox">
                                             <div class="item">
-                                                <img src="assets/imgs/icons/tiktok.svg" alt="">
+                                                <img src="/assets/imgs/icons/tiktok.svg" alt="">
                                                 <span>
                                                     TikTok Account
                                                 </span>
@@ -212,7 +212,7 @@
                                     <label class="check-label">
                                         <div class="checkbox">
                                             <div class="item">
-                                                <img src="assets/imgs/icons/google.svg" alt="">
+                                                <img src="/assets/imgs/icons/google.svg" alt="">
                                                 <span>
                                                     Google Account
                                                 </span>
@@ -226,7 +226,7 @@
                                     <label class="check-label">
                                         <div class="checkbox">
                                             <div class="item">
-                                                <img src="assets/imgs/icons/facebook.svg" alt="">
+                                                <img src="/assets/imgs/icons/facebook.svg" alt="">
                                                 <span>
                                                     Facebook Account/Page
                                                 </span>
@@ -240,7 +240,7 @@
                                     <label class="check-label">
                                         <div class="checkbox">
                                             <div class="item">
-                                                <img src="assets/imgs/icons/insta.svg" alt="">
+                                                <img src="/assets/imgs/icons/insta.svg" alt="">
                                                 <span>
                                                     Instagram Account
                                                 </span>
@@ -254,7 +254,7 @@
                                     <label class="check-label">
                                         <div class="checkbox">
                                             <div class="item">
-                                                <img src="assets/imgs/icons/xai.svg" alt="">
+                                                <img src="/assets/imgs/icons/xai.svg" alt="">
                                                 <span>
                                                     X (Twitter) Account
                                                 </span>
@@ -385,15 +385,15 @@
                     <div class="row">
                         <div class="col">
                             <a class="footer__title" href="#">
-                                <img src="assets/imgs/icons/footer-title.svg" alt="">
+                                <img src="/assets/imgs/icons/footer-title.svg" alt="">
                             </a>
                         </div>
                         <div class="col footer__socials">
                             <a href="#">
-                                <img src="assets/imgs/icons/footer-facebook.svg" alt="">
+                                <img src="/assets/imgs/icons/footer-facebook.svg" alt="">
                             </a>
                             <a href="#">
-                                <img src="assets/imgs/icons/footer-xai.svg" alt="">
+                                <img src="/assets/imgs/icons/footer-xai.svg" alt="">
                             </a>
                         </div>
                     </div>
@@ -410,7 +410,7 @@
         </footer>
     </div>
 
-    <script src="assets/js/app.js"></script>
+    <script src="/assets/js/app.js"></script>
 </body>
 
 </html>
